--- a/vuejs/public/index.html
+++ b/vuejs/public/index.html
@@ -8,6 +8,10 @@
     <title>Loan Application</title>
     <link
       rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,600,700,900"
+    />
+    <link
+      rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
     />
     <link
