--- a/vuejs/public/index.html
+++ b/vuejs/public/index.html
@@ -12,7 +12,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
+      href="https://fonts.googleapis.com/css?family=Geometria:100,300,400,500,700,900"
     />
     <link
       rel="stylesheet"
